--- a/Firmware Vivado Project/.gitignore
+++ b/Firmware Vivado Project/.gitignore
@@ -1,7 +1,9 @@
 # Ignore all files in the current directory
 /*.*
+
 # Make sure that the previous pattern didn't match the directories with a "." in their name:
 !/*.*/
+
 # Specifically ignore a few subfolders:
 .Xil/
 NA/
@@ -10,12 +12,14 @@ redpitaya.hw/
 redpitaya.ip_user_files/
 redpitaya.runs/
 redpitaya.sim/
+
 # Ignore everything in the "ip" subfolder:
 redpitaya.srcs/sources_1/ip/**/*.*
 # Except the xci and coe files
 !redpitaya.srcs/sources_1/ip/**/*.xci
 !redpitaya.srcs/sources_1/ip/**/*.xcix
 !redpitaya.srcs/sources_1/ip/*.coe
+
 # Don't ignore the project and gitignore files:
-!vivadoproj.xpr
+!*.xpr
 !.gitignore
